# apex_mind

./: README.md  requirements.txt  setup.py
apex-cli/: README.md  apex.py  setup.py
apex-cli/manifests/: FileReader.json  WebSearch.json  default.json
apex_mind_core/common/: types.py
apex_mind_core/core/: .env  capability_manifest.py  capability_registry.py  hardware_ops.py  logger.py  orchestrator.py  skill_registry.py  state_manager.py  wasi_bridge.py
manifests/: DataProcessor.json  default.json
wasi_security_layer/: .gitignore  Cargo.toml  build_arm.sh  day2_setup.sh  deny.toml  pyproject.toml  setup.py
wasi_security_layer/.cargo/: config.toml
wasi_security_layer/core/: wasi_bridge.py
wasi_security_layer/fuzz/: Cargo.toml
wasi_security_layer/manifests/: test_skill.json
wasi_security_layer/src/: capability.rs  gpu_virtualization.rs  lib.rs  manifest_updater.rs  security_integration.rs  sensor_virtualization.rs
