[build-system]
requires = ["maturin>=1.3"]
build-backend = "maturin"

[project]
name = "wasi_security_layer"
version = "0.1.0"
description = "Rust-based Python extension using pyo3"
authors = [{name = "Danylo Onishchenko", email = "danilon7711@gmail.com"}]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

[tool.maturin]
# target = "x86_64-unknown-linux-gnu" # можно явно указать, если надо
bindings = "pyo3"
strip = false
